--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,12 +1,12 @@
 {
-  "type": "mysql",
+  "type": "sqlite",
   "host": "localhost",
   "port": "3306",
   "username": "root",
   "password": "root",
-  "database": "mtp",
+  "database": "mydb.sql",
   "entities": ["dist/entity/**/*.js"],
-  "migrations":["src/migration/**/*.ts"],
+  "migrations":["dist/migration/**/*.ts"],
   "logging": false,
   "synchronize": true
 }
