--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^3.8.2"
   },
   "dependencies": {
+    "@types/mysql": "^2.15.18",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.22",
