--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
-  "type": "sqlite",
+  "type": "mysql",
   "host": "localhost",
   "port": "3306",
   "username": "root",
   "password": "root",
-  "database": "mydb.sql",
+  "database": "mtp",
   "entities": ["dist/entity/**/*.js"],
   "migrations":["dist/migration/**/*.ts"],
   "logging": false,
